# project20

./: Dockerfile  README.md  _config.yml  helloworld.jl  index.md  pyproject.toml
.github/workflows/: test_julia.yml  test_versioning.yml
docker/: Dockerfile
docs/: api.rst
src/project20/: __main__.py  cli.py
tests/: test_version.py
