[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "project20"
version = "0.1.0"
description = "Tools ensuring reproducible and standarized Python packaging."
authors = [{name = "Jørgen S. Dokken", email = "dokken@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"

[project.scripts]
project20 = "project20.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
linting = [
    "mypy",
    "flake8",
]
docs = [
   "jupyter-book",
   "jupytext",
]
all = [
   "project20[test]",
   "project20[linting]",
   "project20[docs]"
]

 
[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
]

testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/"
]
# Folder to check with mypy
files = [ 
    "src",
    "tests"
]
